# AI_Coding_Agent_Project

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AI_Coding_Agent_Compact.txt  Ai_coding_agent.bat  Ai_coding_agent.md  Ai_coding_agent_stop.bat  Makefile  README.md  docker-compose.yml  render.yaml
apps/api/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements-deploy.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_repositories.py  0003_search.py  0004_chat.py  0005_memory.py
apps/api/app/: __init__.py  ingest_cli.py  main.py  worker_metrics.py
apps/api/app/api/: router.py
apps/api/app/api/middleware/: metrics.py  rate_limit.py  request_id.py
apps/api/app/api/v1/: agents.py  audit.py  auth.py  chat.py  github.py  health.py  insights.py  memory.py  repositories.py  sandbox.py  search.py  users.py
apps/api/app/core/: config.py  cost.py  dependencies.py  exceptions.py  logging.py  metrics.py  security.py
apps/api/app/domain/agents/: schemas.py  service.py
apps/api/app/domain/audit/: service.py
apps/api/app/domain/auth/: schemas.py  service.py
apps/api/app/domain/chat/: __init__.py  models.py  repository.py  schemas.py  service.py  tools.py
apps/api/app/domain/github/: __init__.py  schemas.py  service.py
apps/api/app/domain/insights/: service.py
apps/api/app/domain/memory/: __init__.py  models.py  repository.py  schemas.py  service.py
apps/api/app/domain/repositories/: models.py  repository.py  schemas.py  service.py
apps/api/app/domain/sandbox/: __init__.py  schemas.py
apps/api/app/domain/search/: __init__.py  context.py  schemas.py  service.py
apps/api/app/domain/users/: models.py  repository.py  schemas.py  service.py
apps/api/app/infrastructure/db/: base.py  session.py
apps/api/app/infrastructure/embeddings/: __init__.py  base.py  local.py  openai_provider.py  reranker.py
apps/api/app/infrastructure/git/: clone.py
apps/api/app/infrastructure/github/: __init__.py  client.py
apps/api/app/infrastructure/llm/: __init__.py  base.py  factory.py  ollama.py  openai_provider.py
apps/api/app/infrastructure/parsers/: chunker.py  language.py  tree_sitter.py
apps/api/app/infrastructure/qdrant/: client.py
apps/api/app/infrastructure/redis/: client.py
apps/api/app/infrastructure/sandbox/: __init__.py  policy.py  service.py
apps/api/app/infrastructure/websearch/: __init__.py  client.py
apps/api/app/tasks/: celery_app.py  ingest.py
apps/api/tests/: conftest.py  test_auth.py  test_chunker.py  test_clone_validation.py  test_health.py  test_language_detect.py  test_repositories_api.py  test_security_unit.py
docs/: ARCHITECTURE.md  DEPLOY.md  PHASES.md  SECURITY.md
(+75 files in other folders)
