[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aca-api"
version = "0.1.0"
description = "AI Coding Agent Platform — FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
  # web
  "fastapi==0.115.5",
  "uvicorn[standard]==0.32.1",
  "python-multipart==0.0.17",

  # data
  "SQLAlchemy[asyncio]==2.0.36",
  "asyncpg==0.30.0",
  "alembic==1.14.0",
  "psycopg[binary]==3.2.3",  # for alembic sync ops

  # cache / broker
  "redis==5.2.0",

  # auth / crypto
  "PyJWT[crypto]==2.10.1",
  "passlib[argon2]==1.7.4",
  "argon2-cffi==23.1.0",

  # validation / config
  "pydantic==2.9.2",
  "pydantic-settings==2.6.1",
  "email-validator==2.2.0",

  # http
  "httpx==0.27.2",

  # logging / observability
  "structlog==24.4.0",
  "orjson==3.10.11",
  "prometheus-client==0.21.0",

  # vector store
  "qdrant-client==1.12.1",

  # Phase 2: ingestion / parsing / embeddings
  "celery[redis]==5.4.0",
  "flower==2.0.1",
  "GitPython==3.1.43",
  "tree-sitter==0.23.1",
  "tree-sitter-languages==1.10.2",
  "sentence-transformers==3.2.1",
  "tiktoken==0.8.0",
  "sse-starlette==2.1.3",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
  "pytest-cov==6.0.0",
  "httpx==0.27.2",
  "asgi-lifespan==2.1.0",
  "testcontainers[postgres,redis]==4.8.2",
  "ruff==0.6.9",
  "mypy==1.13.0",
  "types-passlib",
  "ipython==8.29.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# ---------- Ruff ----------
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
  "E", "F", "W",     # pycodestyle / pyflakes
  "I",               # isort
  "B",               # bugbear
  "UP",              # pyupgrade
  "N",               # pep8-naming
  "S",               # bandit (security)
  "ASYNC",           # async correctness
  "RUF",
]
ignore = [
  "S101",   # assert in tests is fine
  "B008",   # FastAPI Depends() in defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S105", "S106", "S311"]

# ---------- Mypy ----------
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions"]

[[tool.mypy.overrides]]
module = ["passlib.*", "jose.*", "testcontainers.*"]
ignore_missing_imports = true

# ---------- Pytest ----------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=app --cov-report=term-missing"
filterwarnings = [
  "ignore::DeprecationWarning",
]
